[package]
name = "grad"
version = "0.1.0"
repository = "https://github.com/geal/grad"
description = "aggregate, store, query and visualize your metrics, all in one tool"
license = "AGPL-3.0-or-later"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
readme = "README.md"
categories = ["database-implementations", "visualization"]
keywords = ["metrics", "statsd", "graph", "chart"]

[dependencies]
nom = "^4.0"
log = "^0.4"
warp = "^0.1"
time = "^0.1"
bytes = "^0.4"
serde = "^1.0"
tokio = "^0.1"
tokio-io = "^0.1"
serde_derive = "^1.0"
pretty_env_logger = "^0.2"
clap = "^2.31.2"
